# v1_scan_bg

./: .env.example  README.md  create-test-data.js  create_sample_images.py  foot-detection-validation-implementation.md  package-lock.json  package.json  pyproject.toml  sample-foot-scan-report.html.bak  serve-client.js  simple-test-data.js  test-client.js  test-foot-detection.js  test-processor.js  test-scan-validation.js  tsconfig.json
attached_assets/: Barogrip Foot Scan Report.html  Pasted--1-User-Registration-Authentication-Can-a-new-user-patient-register-successfully-using-the-mob-1747250225270.txt  Pasted--bin-bash-echo-Starting-Barogrip-Setup-on-Ubuntu-24-04-with-OpenLiteSpeed-echo-This-scri-1743959260395.txt  Pasted--bin-bash-echo-Starting-Barogrip-Setup-on-Ubuntu-24-04-with-OpenLiteSpeed-echo-This-scri-1747334765309.txt  Pasted--bin-bash-echo-Starting-Barogrip-Setup-on-Ubuntu-24-04-with-OpenLiteSpeed-echo-This-script--1747467190784.txt  Pasted--bin-bash-echo-Starting-Barogrip-Setup-on-Ubuntu-24-04-with-OpenLiteSpeed-echo-This-script--1747487187565.txt  Pasted--bin-bash-echo-Starting-Barogrip-Setup-on-Ubuntu-24-04-with-OpenLiteSpeed-echo-This-script--1747489958817.txt  Pasted-Database-barogrip-db-created-successfully-Creating-environment-file-Setting-up-server-bac-1743954398412.txt  Pasted-arogrip-for-Doctors-Clinical-Grade-Precision-Automation-Auto-Diagnosis-with-AI-Confidence-Sc-1744041777921.txt  Pasted-cat-var-www-barogrip-client-src-App-tsx-import-Routes-Route-from-react-router-dom-import--1744032062460.txt  diagnostic_report_generator.py  (+18 more)
client/: serve.js  (+13 more)
(+169 files in other folders)
