[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "fpdf>=1.7.2",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pdfkit>=1.0.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "watchdog>=6.0.0",
]
